Added an on-enter directive to make submitting from inputs easier. Renamed folders/files for consistency. Fixed error when trying to log in with empty fields.

--- a/src/public/views/user/templates/login.view.client.html
+++ b/src/public/views/user/templates/login.view.client.html
@@ -7,7 +7,8 @@
                    ng-model="model.userInfo.username"
                    name="username"
                    class="form-control"
-                   placeholder="username"/>
+                   placeholder="username"
+                   dc-on-enter="model.login(model.userInfo)"/>
         </div>
 
         <div class="row">
@@ -16,7 +17,8 @@
                    name="password"
                    type="password"
                    class="form-control"
-                   placeholder="password"/>
+                   placeholder="password"
+                   dc-on-enter="model.login(model.userInfo)"/>
         </div>
 
         <div class="row">
