--- a/src/public/views/recipe/templates/recipeDetails.view.client.html
+++ b/src/public/views/recipe/templates/recipeDetails.view.client.html
@@ -1,6 +1,6 @@
 <div class="col-sm-2"></div>
 <div class="col-sm-8 content-panel">
-    <div class="container-fluid recipe-details-panel">
+    <div ng-show="model.recipe" class="container-fluid recipe-details-panel fade-in">
         <div class="row">
             <div class="col-sm-2"></div>
             <div class="col-sm-8">
