--- a/src/public/views/recipe/templates/recipeSearch.view.client.html
+++ b/src/public/views/recipe/templates/recipeSearch.view.client.html
@@ -36,7 +36,7 @@
                     <div id="circularG_8" class="circularG"></div>
                 </div>
             </div>
-            <div class="row recipe-search-result" ng-show="model.recipes" ng-repeat="recipe in model.recipes">
+            <div class="row recipe-search-result fade-in" ng-show="model.recipes" ng-repeat="recipe in model.recipes">
                 <div class="visible-xs">
                     <div class="row">
                         <a href="#!/testFood2Fork/recipe/{{recipe.recipe_id}}"><h4 ng-bind-html="recipe.title"></h4></a>
