Made some button text lowercase.

--- a/src/public/views/user/templates/profile.view.client.html
+++ b/src/public/views/user/templates/profile.view.client.html
@@ -9,10 +9,10 @@
                         <img class="profile-picture" src="http://duncanlock.net/images/posts/better-figures-images-plugin-for-pelican/dummy-200x200.png">
                         <div ng-show="loggedIn" class="user-action-button-panel">
                             <div ng-show="model.myProfile">
-                                <button class="btn btn-info">EDIT</button>
+                                <button class="btn btn-info">Edit</button>
                             </div>
                             <div ng-hide="model.myProfile">
-                                <button class="btn btn-primary" ng-click="model.followThisUser(model.user)">FOLLOW</button>
+                                <button class="btn btn-primary" ng-click="model.followThisUser(model.user)">Follow</button>
                             </div>
                         </div>
                     </div>
