--- a/src/public/views/recipe/templates/recipeDetails.view.client.html
+++ b/src/public/views/recipe/templates/recipeDetails.view.client.html
@@ -9,8 +9,8 @@
                     <h5 class="recipe-publisher-heading" ng-bind-html="'Created by ' + model.recipe.publisher"></h5>
                 </div>
                 <div ng-show="loggedIn" class="row like-share-button-row">
-                    <button class="btn btn-primary" ng-click="model.likeRecipe(model.recipe)">LIKE</button>
-                    <button class="btn btn-warning" ng-click="model.shareRecipe(model.recipe)">SHARE</button>
+                    <button class="btn btn-primary" ng-click="model.likeRecipe(model.recipe)">Like</button>
+                    <button class="btn btn-warning" ng-click="model.shareRecipe(model.recipe)">Share</button>
                 </div>
             </div>
         </div>
