Added loading spinner to recipe details page.

--- a/src/public/views/recipe/templates/recipeDetails.view.client.html
+++ b/src/public/views/recipe/templates/recipeDetails.view.client.html
@@ -1,5 +1,17 @@
 <div class="col-sm-2"></div>
 <div class="col-sm-8 content-panel">
+    <div ng-hide="model.recipe" class="loading-spinner">
+        <div id="circularG">
+            <div id="circularG_1" class="circularG"></div>
+            <div id="circularG_2" class="circularG"></div>
+            <div id="circularG_3" class="circularG"></div>
+            <div id="circularG_4" class="circularG"></div>
+            <div id="circularG_5" class="circularG"></div>
+            <div id="circularG_6" class="circularG"></div>
+            <div id="circularG_7" class="circularG"></div>
+            <div id="circularG_8" class="circularG"></div>
+        </div>
+    </div>
     <div ng-show="model.recipe" class="container-fluid recipe-details-panel fade-in">
         <div class="row">
             <div class="col-sm-12">
