--- a/src/public/views/user/templates/profile.view.client.html
+++ b/src/public/views/user/templates/profile.view.client.html
@@ -27,22 +27,22 @@
                     <div class="tab-content">
                         <div class="tab-pane fade active in" id="shared">
                             <div ng-repeat="recipe in model.sharedRecipes">
-                                {{recipe.title}}
+                                <a href="#!/recipe/{{recipe.recipe_id}}">{{recipe.title}}</a>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="liked">
                             <div ng-repeat="recipe in model.likedRecipes">
-                                {{recipe.title}}
+                                <a href="#!/recipe/{{recipe.recipe_id}}">{{recipe.title}}</a>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="followers">
                             <div ng-repeat="user in model.followers">
-                                {{user.username}}
+                                <a href="#!/profile/{{user.username}}">{{user.username}}</a>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="following">
                             <div ng-repeat="user in model.usersFollowing">
-                                {{user.username}}
+                                <a href="#!/profile/{{user.username}}">{{user.username}}</a>
                             </div>
                         </div>
                     </div>
