--- a/src/public/views/user/templates/profile.view.client.html
+++ b/src/public/views/user/templates/profile.view.client.html
@@ -18,31 +18,79 @@
                     </div>
                 </div>
                 <div class="col-md-8 col-sm-12 user-content-panel">
-                    <ul class="nav nav-tabs" id="myTab">
-                        <li class="active"><a data-target="#shared" data-toggle="tab">Shared Recipes</a></li>
-                        <li class=""><a data-target="#liked" data-toggle="tab">Liked Recipes</a></li>
-                        <li class=""><a data-target="#followers" data-toggle="tab">Followers</a></li>
-                        <li class=""><a data-target="#following" data-toggle="tab">Following</a></li>
-                    </ul>
+                    <div class="hidden-lg">
+                        <ul class="nav nav-tabs centered-tabs">
+                            <li class="dropdown dropdown-tab-label active">
+                                <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Recipes<span class="caret"></span></a>
+                                <ul class="dropdown-menu dropdown-tab-selection open-overflow-right">
+                                    <li class="">
+                                        <a class="profile-tab" data-target="#shared" data-toggle="tab">Shared Recipes</a>
+                                    </li>
+                                    <li class="">
+                                        <a class="profile-tab" data-target="#liked" data-toggle="tab">Liked Recipes</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="dropdown dropdown-tab-label">
+                                <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Users<span class="caret"></span></a>
+                                <ul class="dropdown-menu dropdown-tab-selection open-overflow-left">
+                                    <li class="">
+                                        <a class="profile-tab" data-target="#followers" data-toggle="tab">Followers</a>
+                                    </li>
+                                    <li class="">
+                                        <a class="profile-tab" data-target="#following" data-toggle="tab">Following</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="visible-lg">
+                        <ul class="nav nav-tabs">
+                            <li class="">
+                                <a class="profile-tab" data-target="#shared" data-toggle="tab">Shared Recipes</a>
+                            </li>
+                            <li class="">
+                                <a class="profile-tab" data-target="#liked" data-toggle="tab">Liked Recipes</a>
+                            </li>
+                            <li class="">
+                                <a class="profile-tab" data-target="#followers" data-toggle="tab">Followers</a>
+                            </li>
+                            <li class="">
+                                <a class="profile-tab" data-target="#following" data-toggle="tab">Following</a>
+                            </li>
+                        </ul>
+                    </div>
                     <div class="tab-content">
                         <div class="tab-pane fade active in" id="shared">
-                            <div ng-repeat="recipe in model.sharedRecipes">
-                                <a href="#!/recipe/{{recipe.recipe_id}}">{{recipe.title}}</a>
+                            <div class="container-fluid">
+                                <h4>Shared Recipes</h4>
+                                <div ng-repeat="recipe in model.sharedRecipes">
+                                    <a href="#!/recipe/{{recipe.recipe_id}}">{{recipe.title}}</a>
+                                </div>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="liked">
-                            <div ng-repeat="recipe in model.likedRecipes">
-                                <a href="#!/recipe/{{recipe.recipe_id}}">{{recipe.title}}</a>
+                            <div class="container-fluid">
+                                <h4>Liked Recipes</h4>
+                                <div ng-repeat="recipe in model.likedRecipes">
+                                    <a href="#!/recipe/{{recipe.recipe_id}}">{{recipe.title}}</a>
+                                </div>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="followers">
-                            <div ng-repeat="user in model.followers">
-                                <a href="#!/profile/{{user.username}}">{{user.username}}</a>
+                            <div class="container-fluid">
+                                <h4>Followers</h4>
+                                <div ng-repeat="user in model.followers">
+                                    <a href="#!/profile/{{user.username}}">{{user.username}}</a>
+                                </div>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="following">
-                            <div ng-repeat="user in model.usersFollowing">
-                                <a href="#!/profile/{{user.username}}">{{user.username}}</a>
+                            <div class="container-fluid">
+                                <h4>Following</h4>
+                                <div ng-repeat="user in model.usersFollowing">
+                                    <a href="#!/profile/{{user.username}}">{{user.username}}</a>
+                                </div>
                             </div>
                         </div>
                     </div>
