--- a/src/public/views/user/templates/settings.view.client.html
+++ b/src/public/views/user/templates/settings.view.client.html
@@ -69,6 +69,7 @@
                 <input id="newEmail"
                        ng-model="model.newEmail"
                        name="newEmail"
+                       type="email"
                        class="form-control"
                        placeholder="new email"
                        dc-on-enter="model.updateEmail(model.password, model.newEmail)"/>
