--- a/src/public/views/user/templates/profile.view.client.html
+++ b/src/public/views/user/templates/profile.view.client.html
@@ -25,29 +25,46 @@
                     <div class="hidden-lg">
                         <ul class="nav nav-tabs centered-tabs">
                             <li class="dropdown dropdown-tab-label active">
-                                <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Recipes<span class="caret"></span></a>
+                                <a class="dropdown-toggle" data-toggle="dropdown">
+                                    Recipes<span class="caret"></span>
+                                </a>
                                 <ul class="dropdown-menu dropdown-tab-selection open-overflow-right">
-                                    <li class="">
-                                        <a class="profile-tab" data-target="#shared" data-toggle="tab">Shared Recipes</a>
+                                    <li class="active">
+                                        <a class="profile-tab"
+                                           data-target="#shared"
+                                           data-toggle="tab"
+                                           ng-click="model.getSharedRecipes()">Shared Recipes</a>
                                     </li>
                                     <li class="">
-                                        <a class="profile-tab" data-target="#liked" data-toggle="tab">Liked Recipes</a>
+                                        <a class="profile-tab"
+                                           data-target="#liked"
+                                           data-toggle="tab"
+                                           ng-click="model.getLikedRecipes()">Liked Recipes</a>
                                     </li>
                                 </ul>
                             </li>
                             <li class="dropdown dropdown-tab-label">
-                                <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Users<span class="caret"></span></a>
+                                <a class="dropdown-toggle" data-toggle="dropdown">
+                                    Users<span class="caret"></span>
+                                </a>
                                 <ul class="dropdown-menu dropdown-tab-selection open-overflow-left">
                                     <li class="">
-                                        <a class="profile-tab" data-target="#followers" data-toggle="tab">Followers</a>
+                                        <a class="profile-tab"
+                                           data-target="#followers"
+                                           data-toggle="tab"
+                                           ng-click="model.getFollowers()">Followers</a>
                                     </li>
                                     <li class="">
-                                        <a class="profile-tab" data-target="#following" data-toggle="tab">Following</a>
+                                        <a class="profile-tab"
+                                           data-target="#following"
+                                           data-toggle="tab"
+                                           ng-click="model.getUsersFollowing()">Following</a>
                                     </li>
                                 </ul>
                             </li>
                         </ul>
                     </div>
+
                     <div class="visible-lg">
                         <ul class="nav nav-tabs">
                             <li class="active">
@@ -76,12 +93,13 @@
                             </li>
                         </ul>
                     </div>
+
                     <div class="tab-content">
                         <div class="tab-pane fade active in" id="shared">
                             <div class="container-fluid">
                                 <h4>Shared Recipes</h4>
                                 <div ng-repeat="recipe in model.sharedRecipes">
-                                    <a href="#!/recipe/{{recipe._id}}">{{recipe.title}}</a>
+                                    <a href="#!/recipe/{{recipe.recipe_id}}">{{recipe.title}}</a>
                                 </div>
                             </div>
                         </div>
@@ -89,7 +107,7 @@
                             <div class="container-fluid">
                                 <h4>Liked Recipes</h4>
                                 <div ng-repeat="recipe in model.likedRecipes">
-                                    <a href="#!/recipe/{{recipe._id}}">{{recipe.title}}</a>
+                                    <a href="#!/recipe/{{recipe.recipe_id}}">{{recipe.title}}</a>
                                 </div>
                             </div>
                         </div>
@@ -110,6 +128,7 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
